force-app/main/default/objects/Audit_Log__c/Audit_Log__c.object-meta.xml
<CustomObject>
    <description>Hospital Management System object for Audit Log.</description>
    <label>Audit Log</label>
    <nameField>
        <displayFormat>AUD-{00000}</displayFormat>
        <label>Audit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>