force-app/main/default/objects/Audit_Log__c/fields/Change_Detail__c.field-meta.xml
<CustomField>
    <fullName>Change_Detail__c</fullName>
    <label>Change Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>